Add comment in class.

--- a/force-app/main/default/classes/AccountSearchController.cls
+++ b/force-app/main/default/classes/AccountSearchController.cls
@@ -1,3 +1,4 @@
+// This class is used in AccountSearch component.
 public with sharing class AccountSearchController {
     @AuraEnabled
     public static List<Account> searchAccounts( String searchTerm ) {
