Just add CreatedBy comment.

--- a/force-app/main/default/classes/AccountSearchController.cls
+++ b/force-app/main/default/classes/AccountSearchController.cls
@@ -1,4 +1,5 @@
 // This class is used in AccountSearch component.
+// CreatedBy    - Shakti Singh
 public with sharing class AccountSearchController {
     @AuraEnabled
     public static List<Account> searchAccounts( String searchTerm ) {
