Add comment on AccountUtils class

--- a/force-app/main/default/classes/AccountUtils.cls
+++ b/force-app/main/default/classes/AccountUtils.cls
@@ -1,3 +1,7 @@
+
+/*
+Objective : This class is utility class of account object.
+*/
 public class AccountUtils {
 
     public static List<Account> accountsByState(String state){
