Add comment in AccountTriggerHandler.

--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -1,3 +1,6 @@
+/*
+Objective : This is the account trigger handler class
+*/
 public class AccountTriggerHandler {
 
     public static void CreateAccounts(List<Account> listOfAccount){
